# book-app

./: .gitignore  CEL.txt  Dockerfile  LUIGI.md  LUIGI2.md  PIPELINE.md  README.md  ROADMAP.md  TODO.md  aaa.md  docker-compose.yml  knowledge_graph_test0_20250607_072745.json  luigi.cfg  pyproject.toml  scenario.md  test.json  test_hierarchical.py  test_owu_exclusions.py  test_owu_exclusions_definitions.py  test_owu_exclusions_wariants.py  test_similarity.py
agent/: __init__.py  knowledge_graph_builder.py  main.py
api/: README.md  main.py  models.py  server.py  start.py
docs/: AFTER.md  Partial.md  README.md  baza_wspinaczkowa.txt  excl.md  kamienica.txt  llm_20250630_010606_727_RESPONSE.txt  llm_20250630_022400_710_RESPONSE.txt  llm_20250630_022418_949_RESPONSE.txt  llm_20250630_022505_898_RESPONSE.txt  owu2_combined_20250701_005953.md  owu2_combined_20250701_031240.md  owu_COMBINED_5281a67c.md  pipe.txt  test0.txt  test1.txt  test2.txt  test2tabl.txt  test3.txt  test4.txt  wiersz.txt  wspiny.txt
documentation/: doc.0.discussion.md  doc.1.problem.description.md  doc.2.summary.md  pipe.md
entities/: ent.1749274065198030.0bb3a445.json  ent.1749274065198426.ffc02bca.json  ent.1749274065198645.a9786399.json  ent.1749274065198874.a77ea43e.json  test0_cleaned.txt
llm/: __init__.py  adapter.py  anthropic_client.py  base.py  embeddings_client.py  models.py  ollama_client.py  openai_client.py  utils.py
luigi_components/: pdf_llm_processor.py
luigi_document_splitter_pipeline/: README.md  __init__.py  config.py  config.yaml  run_splitter_pipeline.py
ner/: __init__.py  (+17 more)
(+220 files in other folders)
